--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
         <h3>My Tasks List</h3>
         <i class="fas fa-sync-alt"></i>
       </div>
-      <input class="input-task" name="add-task" placeholder="Add to your list...">
+      <input class="input-task" name="add-task" placeholder="Add tasks...">
       <ul class="task-placeholder">
 
       </ul>
       <div class="task-complete d-flex justify-content-center align-content-center py-3">
-        <h3>Clear all completed</h3>
+        <h3 class="text-center clear-btn">Clear all completed</h3>
       </div>
     </div>
   </main>
