--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <input type="text" id="new-list" placeholder="Add to do list...">
         <button type="button" id="add"> ↵ </button>
       </li>
-      <li class="ordered list-element d-flex justify-content-center align-content-center py-3">
+      <li class="task-element ordered d-flex justify-content-center align-content-center py-3">
         <a id="remove" href="#" class="text-center remove-btn">Remove all completed</a>
       </li>
     </ul>
