--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  <title>To-Do-List</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <title>To Do List</title>
 </head>
-<body >
-  <main class="container-fluid d-flex align-content-center h-100">
-    <ul id="list-items" class="list-unstyled w-50 mx-auto mt-5 container d-flex flex-column bg-light p-5">
-      <li class="d-flex justify-content-between align-content-center">
-        <p>My to do Items</p>
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-arrow-repeat"
-          viewBox="0 0 16 16">
-          <path
-            d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z" />
-          <path fill-rule="evenodd"
-            d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z" />
-        </svg>
-      </li>
-      <li class="d-flex justify-content-between align-content-center py-3">
-        <input type="text" id="new-list" placeholder="Add to do list...">
-        <button type="button" id="add"> ↵ </button>
-      </li>
-      <li class="task-element ordered d-flex justify-content-center align-content-center py-3">
-        <a id="remove" href="#" class="text-center remove-btn">Remove all completed</a>
-      </li>
-    </ul>
-  </main>
+
+<body class="container-fluid d-flex h-100 align-content-center">
+
+  <ul id="list" class="list-unstyled w-50 mx-auto mt-5 container d-flex flex-column bg-light p-5">
+    <li class="d-flex justify-content-between align-content-center">
+      <p>Today's To Do</p>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path
+          d="M9 12l-4.463 4.969-4.537-4.969h3c0-4.97 4.03-9 9-9 2.395 0 4.565.942 6.179 2.468l-2.004 2.231c-1.081-1.05-2.553-1.699-4.175-1.699-3.309 0-6 2.691-6 6h3zm10.463-4.969l-4.463 4.969h3c0 3.309-2.691 6-6 6-1.623 0-3.094-.65-4.175-1.699l-2.004 2.231c1.613 1.526 3.784 2.468 6.179 2.468 4.97 0 9-4.03 9-9h3l-4.537-4.969z" />
+      </svg>
+    </li>
+    <li class="d-flex justify-content-between align-content-center py-3">
+      <input type="text" id="new-task" placeholder="Add your tasks list...">
+      <button type="button" id="add">↵</button>
+    </li>
+    <li class="ordered list-element d-flex justify-content-center align-content-center py-3">
+      <a id="remove" href="#" class="text-center remove-btn">Clear all completed</a>
+    </li>
+  </ul>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
